fix iso input color fix ingredient spacing

--- a/frontend/src/components/recipe/recipe.scss
+++ b/frontend/src/components/recipe/recipe.scss
@@ -143,7 +143,7 @@
     list-style-type: none;
     margin: 0;
     li {
-      margin: 0.7rem 0;
+      margin: 1rem 0;
       font-size: 1.1rem;
       word-spacing: 0.05rem;
       line-height: 1.1rem;
@@ -244,6 +244,7 @@
         input {
           border: none !important;
           color: black !important;
+          -webkit-text-fill-color: black !important;
           font-weight: normal;
         }
       }
